accordion open and style overrides

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
   --light-color: #f5f5f5;
   --dark-color: #505050;
   --text-color: #25243B;
+  --text-color-light: #DDDBDA; /* mayura */
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
   --purple-color: #563b80;
