--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -341,3 +341,179 @@ body.modal-open {
   margin: 0 0 25px;
   padding: 40px 0 0;
 }
+
+/* ===== Mayura Metal Card Modal Styles ===== */
+
+.modal .section[data-id="mayura-metal-card-modal"] {
+  position: relative;
+  font: 14px Inter, sans-serif;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div {
+  align-items:flex-start;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2) {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div h2 {
+  text-align: left;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div a {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #fff;
+    display: block;
+    padding: 13px 40px;
+    background: #9b1e26;
+    border-radius: 23px;
+    max-width: fit-content;
+    margin: 0;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div {
+  margin-top: 40px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 52px auto;
+  grid-template-columns: 52px auto;
+  gap: 12px;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div > p:first-child {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background: #ebdfdf;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid #880e16;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) img {
+  width: 23px;
+  vertical-align: middle;
+  border-style: none;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div {
+  margin-top: 22px; 
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div {
+  background: #e6e6e6;
+  border-radius: 4px;
+  text-align: center;
+  padding: 12px 25px;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div p:first-child {
+  font-size: 12px;
+  line-height: 18px;
+  margin-bottom: 6px;
+  font-weight: 500;
+  color: #222;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div h3 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #9b1e26;
+}
+
+.modal .section[data-id="mayura-metal-card-modal"] > .default-content a {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #fff;
+  display: none;
+  padding: 13px 40px;
+  background: #9b1e26;
+  border-radius: 23px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 20px auto 0;
+}
+
+@media (width <= 768px) {
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div {
+    -ms-grid-columns: (1fr)[1];
+    grid-template-columns: repeat(1, 1fr);
+    gap: 14px;
+    text-align: center;
+    max-width: 90%;
+    margin: auto;
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2){
+    padding: 0;  
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2) h2 {
+    text-align: center;
+    font-size: 15px;
+    line-height: 21px;
+    margin-bottom: 4px;
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div p {
+    display: none;
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div {
+    gap: 17px;
+    padding-top: 20px;
+    margin-top: 20px;
+    border-top: 1px solid #c1c1c1;
+    -ms-flex-align: start;
+    align-items: start;
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
+    -ms-flex-pack: start;
+    justify-content: start;
+  }
+  
+  .modal .section[data-id="mayura-metal-card-modal"] > .default-content a {
+  display: block;
+  }
+}
