--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -344,12 +344,12 @@ body.modal-open {
 
 /* ===== Mayura Metal Card Modal Styles ===== */
 
-.modal .section[data-id="mayura-metal-card-modal"] {
+.modal .section[data-id="mayura-card-modal"] {
   position: relative;
   font: var(--body-font-size-xs);
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div {
+.modal .section[data-id="mayura-card-modal"] > div > div:first-child > div {
   align-items:flex-start;
   height: auto;
   display: grid;
@@ -357,7 +357,7 @@ body.modal-open {
   gap: 20px;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2) {
+.modal .section[data-id="mayura-card-modal"] > div > div:first-child > div > div:nth-child(2) {
   padding-top: 10px;
   display: flex;
   flex-direction: column;
@@ -365,11 +365,11 @@ body.modal-open {
   justify-content: space-between;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div h2 {
+.modal .section[data-id="mayura-card-modal"] > div > div:first-child > div h2 {
   text-align: left;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div a {
+.modal .section[data-id="mayura-card-modal"] > div > div:first-child > div a {
     font-size: var(--body-font-size-xs);
     line-height: 20px;
     font-weight: 700;
@@ -382,7 +382,7 @@ body.modal-open {
     margin: 0;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) > div {
   margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -390,14 +390,14 @@ body.modal-open {
   align-items: center;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) > div > div {
   display: grid;
   grid-template-columns: 52px auto;
   gap: 12px;
   align-items: center;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div > p:first-child {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) > div > div > p:first-child {
   width: 52px;
   height: 52px;
   border-radius: 50%;
@@ -409,27 +409,27 @@ body.modal-open {
   border: 1px solid #880e16;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) img {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) img {
   width: 23px;
   vertical-align: middle;
   border-style: none;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(3) > div {
   margin-top: 22px; 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(3) > div > div {
   background: #e6e6e6;
   border-radius: 4px;
   text-align: center;
   padding: 12px 25px;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div p:first-child {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(3) > div > div p:first-child {
   font-size: 12px;
   line-height: 18px;
   margin-bottom: 6px;
@@ -437,14 +437,14 @@ body.modal-open {
   color: #222;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(3) > div > div h3 {
+.modal .section[data-id="mayura-card-modal"] > div > div:nth-child(3) > div > div h3 {
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
   color: #9b1e26;
 }
 
-.modal .section[data-id="mayura-metal-card-modal"] > .default-content a {
+.modal .section[data-id="mayura-card-modal"] > .default-content a {
   font-size: var(--body-font-size-xs);
   line-height: 20px;
   font-weight: 700;
@@ -458,7 +458,7 @@ body.modal-open {
 }
 
 @media (width < 768px) {
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div {
+  .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div {
     grid-template-columns: repeat(1, 1fr);
     gap: 14px;
     text-align: center;
@@ -466,22 +466,22 @@ body.modal-open {
     margin: auto;
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2){
+  .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div > div:nth-child(2){
     padding: 0;  
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div > div:nth-child(2) h2 {
+  .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div > div:nth-child(2) h2 {
     text-align: center;
     font-size: 15px;
     line-height: 21px;
     margin-bottom: 4px;
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:first-child > div p {
+  .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div p {
     display: none;
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div {
+  .modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) > div {
     gap: 17px;
     padding-top: 20px;
     margin-top: 20px;
@@ -489,7 +489,7 @@ body.modal-open {
     align-items: start;
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > div > div:nth-child(2) > div > div {
+  .modal .section[data-id="mayura-card-modal"] > div > div:nth-child(2) > div > div {
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -497,7 +497,7 @@ body.modal-open {
     justify-content: start;
   }
   
-  .modal .section[data-id="mayura-metal-card-modal"] > .default-content a {
+  .modal .section[data-id="mayura-card-modal"] > .default-content a {
   display: block;
   }
 }
