--- a/styles/styles.css
+++ b/styles/styles.css
@@ -314,6 +314,89 @@ button.secondary:focus {
   background-color: #f9f0f0;
 }
 
+/* Button block styles (Universal Editor component) - base states */
+.button.block.primary a,
+.button.block.secondary a {
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 12px 0;
+  border-radius: 2.4em;
+  padding: 0.5em 1.2em;
+  font-family: var(--body-font-family);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button.block.primary a {
+  border: 2px solid transparent;
+  background-color: #902a2b;
+  color: #fff;
+}
+
+.button.block.secondary a {
+  border: 2px solid #902a2b;
+  background-color: #fff;
+  color: #902a2b;
+}
+
+/* Button block scheme variants - base states */
+.light-scheme .button.block.primary a {
+  background-color: #902a2b;
+  color: #fff;
+}
+
+.light-scheme .button.block.secondary a {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+.dark-scheme .button.block.primary a {
+  background-color: #fff;
+  color: #902a2b;
+}
+
+.dark-scheme .button.block.secondary a {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+/* Button block hover/focus states */
+.button.block.primary a:hover,
+.button.block.primary a:focus {
+  background-color: #7a2324;
+}
+
+.button.block.secondary a:hover,
+.button.block.secondary a:focus {
+  background-color: #f9f0f0;
+}
+
+.light-scheme .button.block.primary a:hover,
+.light-scheme .button.block.primary a:focus {
+  background-color: #7a2324;
+}
+
+.light-scheme .button.block.secondary a:hover,
+.light-scheme .button.block.secondary a:focus {
+  background-color: #f9f0f0;
+}
+
+.dark-scheme .button.block.primary a:hover,
+.dark-scheme .button.block.primary a:focus {
+  background-color: #f0f0f0;
+}
+
+.dark-scheme .button.block.secondary a:hover,
+.dark-scheme .button.block.secondary a:focus {
+  background-color: rgb(255 255 255 / 10%);
+}
+
 /* Scheme button base states */
 .light-scheme a.button.primary:any-link,
 .light-scheme button.primary {
