--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,8 +358,8 @@ button.secondary:focus {
 }
 
 .dark-scheme .button.block.primary a {
-  background-color: #902a2b;
-  color: #fff;
+  background-color: #fff;
+  color: #902a2b;
   border-color: transparent;
 }
 
@@ -398,7 +398,6 @@ button.secondary:focus {
 .dark-scheme .button.block.primary a:focus {
   background-color: #fff;
   border-color: #902a2b;
-  color: #902a2b;
 }
 
 .dark-scheme .button.block.secondary a:hover,
@@ -416,8 +415,8 @@ button.secondary:focus {
 
 .dark-scheme a.button.primary:any-link,
 .dark-scheme button.primary {
-  background-color: #902a2b;
-  color: #fff;
+  background-color: #fff;
+  color: #902a2b;
   border-color: transparent;
 }
 
@@ -458,7 +457,6 @@ button.primary:disabled:hover {
 .dark-scheme button.primary:focus {
   background-color: #fff;
   border-color: #902a2b;
-  color: #902a2b;
 }
 
 .light-scheme a.button.secondary:hover,
