--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -55,7 +55,7 @@ body.modal-open {
   overflow-y: auto;
   overscroll-behavior: none;
   width: 100%;
-  max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 48px);
+  /* max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 48px); */
   padding: 32px 24px;
 }
 
@@ -65,7 +65,7 @@ body.modal-open {
   }
   
   .modal dialog .modal-content {
-    max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 64px);
+    /* max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 64px); */
     padding: 40px 48px;
   }
 }
@@ -500,4 +500,250 @@ body.modal-open {
   .modal .section[data-id="mayura-card-modal"] > .default-content a {
   display: block;
   }
+}
+
+/* ===== Mayura Metal Concept Modal Styles ===== */
+
+.section[data-id="mayura-metal-concept-1"] {
+  display: flex;
+  justify-content: center;
+}
+
+.section[data-id="mayura-metal-concept-2"] {
+  display: none;
+  justify-content: center;
+}
+
+.section[data-id="mayura-metal-concept-3"] {
+  display: none;
+  justify-content: center;
+}
+
+.section[data-id="mayura-metal-concept-2"] > div > div > div > div:first-child {
+  margin:0;
+  transition: all .5s ease-in-out;
+  position: relative;
+}
+.section[data-id="mayura-metal-concept-2"] > div > div > div > div:first-child {
+  margin-top: 13%;
+  margin-left: 5%;
+  transition: all .5s ease-in-out;
+  position: relative;
+}
+
+.section[data-id="mayura-metal-concept-3"] > div > div > div > div:first-child {
+  margin-top: -10%;
+  transition: all .5s ease-in-out;
+  position: relative;
+  width: 100;
+}
+
+.section[data-id^="mayura-metal-concept-"] p {
+  background: var(--Primary, linear-gradient(308.18deg, #110140 4.16%, #1E2A8E 44.91%, #010740 88.8%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  position: relative;
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.section[data-id^="mayura-metal-concept-"] p:last-child {
+  margin-top: 1rem;
+  background: unset;
+  -webkit-background-clip: unset;
+  -webkit-text-fill-color: unset;
+  display: block;
+}
+
+.section[data-id^="mayura-metal-concept-"] p > a {
+  text-decoration: underline;
+  color: black;
+}
+
+.section[data-id^="mayura-metal-concept-"] div.columns-img-col {
+  position: relative;
+}
+
+.section[data-id="mayura-metal-concept-1"] div.columns-img-col::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 35%;
+  left: 11%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+.section[data-id="mayura-metal-concept-1"] div.columns-img-col::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 55%;
+  left: 52%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+  .section[data-id="mayura-metal-concept-1"] div.columns-img-col > picture::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 16%;
+  left: 61%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+.section[data-id="mayura-metal-concept-2"] div.columns-img-col::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 22%;
+  left: 14%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+.section[data-id="mayura-metal-concept-2"] div.columns-img-col::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 62%;
+  left: 51%;
+  background: white;
+  width: 20px;
+  height: 20px; 
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+  .section[data-id="mayura-metal-concept-2"] div.columns-img-col > picture::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 16%;
+  left: 61%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+.section[data-id="mayura-metal-concept-3"] div.columns-img-col::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 11%;
+  left: 22%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+.section[data-id="mayura-metal-concept-3"] div.columns-img-col::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 61%;
+  left: 42%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+  .section[data-id="mayura-metal-concept-3"] div.columns-img-col > picture::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 22%;
+  left: 81%;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  animation: zoomFade 2s infinite;
+}
+
+@keyframes zoomFade {
+  0% {
+    transform: scale(0.3);
+    opacity: 0.5
+  }
+
+  40% {
+    transform: scale(1);
+    opacity: 1
+  }
+
+  60% {
+    transform: scale(1);
+    opacity: 1
+  }
+
+  100% {
+    transform: scale(1.5);
+    opacity: 0
+  }
+}
+
+/* Mayura hotspot container - covers the image column for click detection */
+.mayura-hotspot-container {
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+}
+
+.mayura-hotspot {
+  pointer-events: auto;
+}
+
+/* Mayura concept section fade transitions */
+.section[data-id^="mayura-metal-concept-"] {
+  transition: opacity 0.5s ease-in-out;
+}
+
+.section[data-id^="mayura-metal-concept-"].fade-out {
+  opacity: 0;
+}
+
+.section[data-id^="mayura-metal-concept-"].fade-in {
+  opacity: 1;
+}
+
+@media (width < 900px) {
+
+  .section[data-id="mayura-metal-concept-1"] > div > div > div > div:first-child {
+  margin-top: 5%;
+  }
+  
+  .section[data-id="mayura-metal-concept-2"] > div > div > div > div:first-child {
+  margin-top: 5%;
+  margin-left: 30%;
+  }
+    
+  .section[data-id="mayura-metal-concept-3"] > div > div > div > div:first-child {
+  margin-top: 5%;
+  }
+
 }
