--- a/styles/styles.css
+++ b/styles/styles.css
@@ -261,9 +261,12 @@ strong {
   font-weight: 700;
 }
 
-/* buttons - base styles */
+/* ===== BUTTON STYLES ===== */
+
+/* Button base styles (shared by all buttons) */
 a.button:any-link,
-button.button {
+button.button,
+.button.block a {
   box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
@@ -283,9 +286,10 @@ button.button {
   white-space: nowrap;
 }
 
-/* Primary button */
+/* Primary button - default (light scheme) */
 a.button.primary:any-link,
-button.primary {
+button.primary,
+.button.block.primary a {
   background-color: #902a2b;
   color: #fff;
   border-color: transparent;
@@ -294,82 +298,7 @@ button.primary {
 a.button.primary:hover,
 a.button.primary:focus,
 button.primary:hover,
-button.primary:focus {
-  background-color: #fff;
-  border-color: #902a2b;
-  color: #902a2b;
-  cursor: pointer;
-}
-
-/* Secondary button */
-a.button.secondary:any-link,
-button.secondary {
-  background-color: transparent;
-  border: 2px solid #902a2b;
-  color: #902a2b;
-}
-
-a.button.secondary:hover,
-a.button.secondary:focus,
-button.secondary:hover,
-button.secondary:focus {
-  background-color: #fff;
-}
-
-/* Button block styles (Universal Editor component) - base states */
-.button.block.primary a,
-.button.block.secondary a {
-  box-sizing: border-box;
-  display: inline-block;
-  margin: 12px 0;
-  border-radius: 2.4em;
-  padding: 0.5em 1.2em;
-  font-family: var(--body-font-family);
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.25;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.button.block.primary a {
-  border: 2px solid transparent;
-  background-color: #902a2b;
-  color: #fff;
-}
-
-.button.block.secondary a {
-  border: 2px solid #902a2b;
-  background-color: transparent;
-  color: #902a2b;
-}
-
-/* Button block scheme variants - base states */
-.light-scheme .button.block.primary a {
-  background-color: #902a2b;
-  color: #fff;
-}
-
-.light-scheme .button.block.secondary a {
-  background-color: transparent;
-  border-color: #902a2b;
-  color: #902a2b;
-}
-
-.dark-scheme .button.block.primary a {
-  background-color: transparent;
-  color: #fff;
-  border-color: #fff;
-}
-
-.dark-scheme .button.block.secondary a {
-  background-color: #fff;
-  border-color: #902a2b;
-  color: #902a2b;
-}
-
-/* Button block hover/focus states */
+button.primary:focus,
 .button.block.primary a:hover,
 .button.block.primary a:focus {
   background-color: #fff;
@@ -377,23 +306,37 @@ button.secondary:focus {
   color: #902a2b;
 }
 
+/* Secondary button - default (light scheme) */
+a.button.secondary:any-link,
+button.secondary,
+.button.block.secondary a {
+  background-color: transparent;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+a.button.secondary:hover,
+a.button.secondary:focus,
+button.secondary:hover,
+button.secondary:focus,
 .button.block.secondary a:hover,
 .button.block.secondary a:focus {
   background-color: #fff;
 }
 
-.light-scheme .button.block.primary a:hover,
-.light-scheme .button.block.primary a:focus {
-  background-color: #fff;
-  border-color: #902a2b;
-  color: #902a2b;
+/* Dark scheme - Primary button (transparent with white border) */
+.dark-scheme a.button.primary:any-link,
+.dark-scheme button.primary,
+.dark-scheme .button.block.primary a {
+  background-color: transparent;
+  color: #fff;
+  border-color: #fff;
 }
 
-.light-scheme .button.block.secondary a:hover,
-.light-scheme .button.block.secondary a:focus {
-  background-color: #fff;
-}
-
+.dark-scheme a.button.primary:hover,
+.dark-scheme a.button.primary:focus,
+.dark-scheme button.primary:hover,
+.dark-scheme button.primary:focus,
 .dark-scheme .button.block.primary a:hover,
 .dark-scheme .button.block.primary a:focus {
   background-color: #fff;
@@ -401,37 +344,12 @@ button.secondary:focus {
   color: #902a2b;
 }
 
-.dark-scheme .button.block.secondary a:hover,
-.dark-scheme .button.block.secondary a:focus {
-  background-color: #fff;
-}
-
-/* Scheme button base states */
-.light-scheme a.button.primary:any-link,
-.light-scheme button.primary {
-  background-color: #902a2b;
-  color: #fff;
-  border-color: transparent;
-}
-
-.dark-scheme a.button.primary:any-link,
-.dark-scheme button.primary {
-  background-color: transparent;
-  color: #fff;
-  border-color: #fff;
-}
-
-.light-scheme a.button.secondary:any-link,
-.light-scheme button.secondary {
-  background-color: transparent;
-  border: 2px solid #902a2b;
-  color: #902a2b;
-}
-
+/* Dark scheme - Secondary button (white with red border) */
 .dark-scheme a.button.secondary:any-link,
-.dark-scheme button.secondary {
+.dark-scheme button.secondary,
+.dark-scheme .button.block.secondary a {
   background-color: #fff;
-  border: 2px solid #902a2b;
+  border-color: #902a2b;
   color: #902a2b;
 }
 
@@ -442,42 +360,9 @@ button.primary:disabled:hover {
   cursor: unset;
 }
 
-/* Scheme button hover/focus states */
-.light-scheme a.button.primary:hover,
-.light-scheme a.button.primary:focus,
-.light-scheme button.primary:hover,
-.light-scheme button.primary:focus {
-  background-color: #fff;
-  border-color: #902a2b;
-  color: #902a2b;
-}
-
-.dark-scheme a.button.primary:hover,
-.dark-scheme a.button.primary:focus,
-.dark-scheme button.primary:hover,
-.dark-scheme button.primary:focus {
-  background-color: #fff;
-  border-color: #fff;
-  color: #902a2b;
-}
-
-.light-scheme a.button.secondary:hover,
-.light-scheme a.button.secondary:focus,
-.light-scheme button.secondary:hover,
-.light-scheme button.secondary:focus {
-  background-color: #fff;
-}
-
-.dark-scheme a.button.secondary:hover,
-.dark-scheme a.button.secondary:focus,
-.dark-scheme button.secondary:hover,
-.dark-scheme button.secondary:focus {
-  background-color: #fff;
-}
-
-/* Remove arrow icon from secondary buttons unless arrow-right-white or arrow-right-red is used */
-.light-scheme button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red),
-.light-scheme a.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red) {
+/* Hide arrow icons on secondary buttons unless arrow-right-white or arrow-right-red */
+.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red),
+a.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red) {
   display: none;
 }
 
